...

    <Button
        android:layout_width="192dp"
        android:layout_height="48dp"
        android:layout_below="@+id/timePicker"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonSetTime"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:text="Set Time"/>

</android.widget.RelativeLayout>

