...
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_toEndOf="@id/buttonSaveProfile"
    android:background="@color/blue"
    android:textColor="@color/white"
    android:layout_alignParentBottom="true"
    android:text="Delete Profile"
    android:layout_marginLeft="4dp"
    android:id="@+id/buttonDiscardChanges"/>


</RelativeLayout>

